<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_baseline_library_add_check_24"
        android:shortcutId="shortcut1"
        android:shortcutLongLabel="@string/desc_shortcut1"
        android:shortcutShortLabel="@string/title_shortcut1">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.elksa.demo.shortcuts.ShortcutActivity1"
            android:targetPackage="com.elksa.demo.shortcuts" />
        <!-- If your shortcut is associated with multiple intents, include them
             here. The last intent in the list determines what the user sees when
             they launch this shortcut. -->
        <categories android:name="android.shortcut.conversation" />
        <capability-binding android:key="actions.intent.CREATE_MESSAGE" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_baseline_library_add_24"
        android:shortcutId="shortcut2"
        android:shortcutLongLabel="@string/desc_shortcut2"
        android:shortcutShortLabel="@string/title_shortcut2">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.elksa.demo.shortcuts.ShortcutActivity2"
            android:targetPackage="com.elksa.demo.shortcuts" />
        <categories android:name="android.shortcut.conversation" />
        <capability-binding android:key="actions.intent.CREATE_MESSAGE" />
    </shortcut>
    <shortcut
        android:enabled="false"
        android:icon="@drawable/ic_baseline_library_books_24"
        android:shortcutDisabledMessage="@string/disabled_shortcut3"
        android:shortcutId="shortcut3"
        android:shortcutLongLabel="@string/desc_shortcut3"
        android:shortcutShortLabel="@string/title_shortcut3">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.elksa.demo.shortcuts.ShortcutActivity2"
            android:targetPackage="com.elksa.demo.shortcuts" />
        <categories android:name="android.shortcut.conversation" />
        <capability-binding android:key="actions.intent.CREATE_MESSAGE" />
    </shortcut>
    <!-- Specify more shortcuts here. -->
</shortcuts>