<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_main"
        app:layout_constraintBottom_toTopOf="@id/btn_shortcuts_add"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_shortcuts_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickAdd"
        android:text="@string/btn_add_shortcuts"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <Button
        android:id="@+id/btn_shortcuts_add_web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickAddWeb"
        android:text="@string/btn_add_shortcut_web"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_shortcuts_add" />

    <Button
        android:id="@+id/btn_shortcuts_add_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickAdd2"
        android:text="@string/btn_add_shortcut_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_shortcuts_add_web" />

    <Button
        android:id="@+id/btn_shortcuts_remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickRemoveAll"
        android:text="@string/btn_remove_shortcuts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_shortcuts_add_2" />

    <Button
        android:id="@+id/btn_shortcut_remove_web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickRemoveWeb"
        android:text="@string/btn_remove_shortcut_web"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_shortcuts_remove" />

    <Button
        android:id="@+id/btn_shortcut_remove_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickRemove2"
        android:text="@string/btn_remove_shortcut_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_shortcut_remove_web" />

    <Button
        android:id="@+id/btn_shortcut_disable_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickDisable2"
        android:text="@string/btn_disable_shortcut_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_shortcut_remove_2" />

    <Button
        android:id="@+id/btn_go_library"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickGoLibrary"
        android:text="@string/btn_go_library"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_shortcut_disable_2" />

    <View
        android:id="@+id/view_divider_rank"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_go_library" />

    <TextView
        android:id="@+id/txt_shortcuts_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_divider_rank"
        tools:text="Name: Shortcut 1 - Type: dynamic - Rank: 2 " />

</androidx.constraintlayout.widget.ConstraintLayout>